# Stash-Jellyfin-Proxy

./: .gitignore  .replit  BACKLOG.md  Dockerfile  README.md  build_container.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  keep_going.sh  pyproject.toml  replit.md  stash_jellyfin_proxy.conf  stash_jellyfin_proxy.dev.conf.example  stash_jellyfin_proxy.py
attached_assets/: Pasted--2025-12-03-08-42-41-467-stash-jellyfin-proxy-INFO-Item_1764773015207.txt  Pasted--2025-12-03-10-24-18-421-stash-jellyfin-proxy-DEBUG-Fet_1764779213657.txt  Pasted--Version-2025-05-14-server-listen-443-ssl-listen-443-ss_1764799934708.txt  Pasted--chris-motu-Projects-stash-infuse-build-docker-0-docker_1764869682108.txt  Pasted--chris-motu-Projects-stash-infuse-build-docker-0-docker_1764874952416.txt  Pasted--chris-motu-Projects-stash-infuse-build-docker-0-docker_1764875158625.txt  Pasted--chris-motu-Projects-stash-infuse-build-docker-148-buil_1764872371530.txt  Pasted--chris-motu-Projects-stash-jellyfin-proxy-0-ls-la-total_1764957044838.txt  Pasted--chris-motu-Projects-stash-jellyfin-proxy-128-git-push-_1764957506799.txt  Pasted--chris-motu-Projects-stash-jellyfin-proxy-build-docker-_1764964483324.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-0-fg-ema_1764791309542.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-0-stash-_1764706946770.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-0-stash-_1764781155423.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-0-stash-_1764792655052.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-0-stash-_1764795651507.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-130-stas_1764714409391.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-130-stas_1764775440250.txt  Pasted--stash-infuse-chris-motu-Projects-stash-infuse-130-stas_1764784575725.txt  (+43 more)
build_docker/: Dockerfile  (+6 more)
(+246 files in other folders)
