[project]
name = "stash-jellyfin-proxy"
version = "6.02"
description = "Proxy that lets Jellyfin clients (Infuse, Findroid, etc.) browse and stream a Stash library."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "hypercorn>=0.16",
    "starlette>=0.37",
    "requests>=2.31",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/feldorn/stash-jellyfin-proxy"
Issues = "https://github.com/feldorn/stash-jellyfin-proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["stash_jellyfin_proxy.py"]

[tool.uv]
# `uv run stash_jellyfin_proxy.py` resolves dependencies from [project].
# `uv sync` creates a .venv matching this lockfile.
